--- a/twitter/index.html
+++ b/twitter/index.html
@@ -28,10 +28,6 @@
 <script src="js/sigma.js/src/renderers/canvas/sigma.canvas.edges.curve.js"></script>
 <script src="js/sigma.js/src/renderers/canvas/sigma.canvas.edges.arrow.js"></script>
 <script src="js/sigma.js/src/renderers/canvas/sigma.canvas.edges.curvedArrow.js"></script>
-<script src="js/sigma.js/src/renderers/canvas/sigma.canvas.edgehovers.def.js"></script>
-<script src="js/sigma.js/src/renderers/canvas/sigma.canvas.edgehovers.curve.js"></script>
-<script src="js/sigma.js/src/renderers/canvas/sigma.canvas.edgehovers.arrow.js"></script>
-<script src="js/sigma.js/src/renderers/canvas/sigma.canvas.edgehovers.curvedArrow.js"></script>
 <script src="js/sigma.js/src/renderers/canvas/sigma.canvas.extremities.def.js"></script>
 <script src="js/sigma.js/src/renderers/svg/sigma.svg.utils.js"></script>
 <script src="js/sigma.js/src/renderers/svg/sigma.svg.nodes.def.js"></script>
@@ -56,7 +52,7 @@
       left: 0;
       right: 0;
       position: absolute;
-      background-color: #1a1a1a;
+      /*background-color: #222222;*/
     }
   </style>
   <div id="graph-container"></div>
@@ -74,27 +70,28 @@ sigma.classes.graph.addMethod('neighbors', function(nodeId) {
     return neighbors;
 });
 
-    sigma.settings.labelThreshold = 10;
+    sigma.settings.labelThreshold = 4;
     sigma.settings.minEdgeSize = 0.1;
     sigma.settings.maxEdgeSize = 0.1;
     sigma.settings.maxNodeSize = 20;
     sigma.settings.labelColor = "node";
     sigma.settings.borderSize = 1;
+    sigma.settings.drawEdges = false;
 
 sigma.parsers.gexf('data/opendatach.gexf', {
     container: 'graph-container',
     },
     function(s) {
 
+        
         var colorscheme =
             ['#edf8fb','#b3cde3','#8c96c6','#8856a7','#810f7c'];
 
-        console.log(s.graph.nodes())
 
         function color(value) {
             value = Number(value);
 
-            if(value < 5)
+            if(value < 1)
                 return colorscheme[0];
             if(value < 10)
                 return colorscheme[1];
@@ -108,6 +105,7 @@ sigma.parsers.gexf('data/opendatach.gexf', {
 
         s.graph.nodes().forEach(function (node) {
             node.color = color(node.attributes.tweets);
+            node.size = node.attributes.followers / 1000;
         });
         s.refresh();
 
@@ -122,7 +120,7 @@ sigma.parsers.gexf('data/opendatach.gexf', {
               if (toKeep[n.id])
                 n.color = color(n.attributes.tweets);
               else
-                n.color = '#ccc';
+                n.color = 'rgba(255,255,255,0.1)';
             });
 
         s.refresh();
