A little bit of styling

--- a/index.html
+++ b/index.html
@@ -103,5 +103,6 @@
 <p>In jedem Fall entscheiden vermutlich das Volumen und die Diversität in den vorhandenen Daten, ob sie zu unerwarteten, neuen Anwendungen führen. Ob dies nun durch ein mehr an publizierten Daten oder durch eine bessere Verlinkung erreicht wird. So auf jeden Fall die Hoffnung der Open Data-Aktivisten.</p>
 
 <p>Die Zeit wird zeigen, ob diese Hoffnung begründet ist. Die Mühlen der Verwaltung mögen für viele in der Open Data-Community frustrierend langsam mahlen, aber sie mahlen nur in eine Richtung. So sagt auch Juan-Pablo Lovato: &quot;Die Zeit arbeitet für uns. Irgendwann wird es selbstverständlich sein, dass Behördendaten frei zugänglich und Teil der Infrastruktur unseres Landes sind.&quot;</p>
+<script src="presentation/presentation.js"></script>
 </body>
 </html>
