Added cantons map via iframe

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 
 <p>Die Bundesverwaltung ist seit dem Inkrafttreten des Öffentlichkeitsgesetzes 2006 verpflichtet den Grossteil ihrer Daten auf Anfrage zur Verfügung zu stellen. Ähnliche Gesetzgebungen <a href="https://www.oeffentlichkeitsgesetz.ch/deutsch/die-kantone">existieren in den meisten Kantonen</a>. Einer Veröffentlichung der Verwaltungsdaten steht also in den Fällen wo das Öffentlichkeitsgesetz greift nichts mehr im Weg. Es kommt hinzu, dass sich durch die Öffnung der Daten eine hohe Wertschöpfung von <a href="https://www.egovernment.ch/de/umsetzung/e-government-schweiz-2008-2015/open-government-data-schweiz/">rund einer Milliarde Franken pro Jahr</a> ergeben würde.</p>
 
+<p><iframe id="landscape" src="cantons/dist/index.html" height="500px"></iframe></p>
+
 <p><a href="cantons/dist/index.html"><em>Map mit Kantonen und Bundesämtern. Zeigt welche Kantone ein Öffentlichkeitsgesetz haben und wie ihr Status bezüglich Open Data ist: 0: Nichts, 1: Open Data-Strategie, 2: Erste Datensätze publiziert, 3: Regelmässige Publikation von offenen Daten, 4: Open Data by default</em></a></p>
 
 <p>Darum hat der Bundesrat 2014 eine nationale <a href="https://www.egovernment.ch/de/umsetzung/e-government-schweiz-2008-2015/open-government-data-schweiz/">Open Governement Data-Strategie</a> verabschiedete. Darin setzt er der Verwaltung das Ziel ihre Prozesse so anzupassen, dass sie ihre Daten ohne Zusatzaufwand standardmässig offen publizieren können. Auch viele Kantone haben mittlerweilen Open Data-Strategien und/oder haben begonnen, ihre Daten offen zu publizieren.</p>
