--- a/twitter/index.html
+++ b/twitter/index.html
@@ -1,34 +1,34 @@
 <!-- START SIGMA IMPORTS -->
-<script src="js/sigma.js/src/sigma.core.js"></script>
-<script src="js/sigma.js/src/conrad.js"></script>
-<script src="js/sigma.js/src/utils/sigma.utils.js"></script>
-<script src="js/sigma.js/src/utils/sigma.polyfills.js"></script>
-<script src="js/sigma.js/src/sigma.settings.js"></script>
-<script src="js/sigma.js/src/classes/sigma.classes.dispatcher.js"></script>
-<script src="js/sigma.js/src/classes/sigma.classes.configurable.js"></script>
-<script src="js/sigma.js/src/classes/sigma.classes.graph.js"></script>
-<script src="js/sigma.js/src/classes/sigma.classes.camera.js"></script>
-<script src="js/sigma.js/src/classes/sigma.classes.quad.js"></script>
-<script src="js/sigma.js/src/captors/sigma.captors.mouse.js"></script>
-<script src="js/sigma.js/src/captors/sigma.captors.touch.js"></script>
-<script src="js/sigma.js/src/renderers/sigma.renderers.webgl.js"></script>
-<script src="js/sigma.js/src/renderers/sigma.renderers.def.js"></script>
-<script src="js/sigma.js/src/renderers/webgl/sigma.webgl.nodes.def.js"></script>
-<script src="js/sigma.js/src/renderers/webgl/sigma.webgl.nodes.fast.js"></script>
-<script src="js/sigma.js/src/renderers/webgl/sigma.webgl.edges.def.js"></script>
-<script src="js/sigma.js/src/renderers/webgl/sigma.webgl.edges.fast.js"></script>
-<script src="js/sigma.js/src/renderers/webgl/sigma.webgl.edges.arrow.js"></script>
-<script src="js/sigma.js/src/renderers/canvas/sigma.canvas.labels.def.js"></script>
-<script src="js/sigma.js/src/renderers/canvas/sigma.canvas.hovers.def.js"></script>
-<script src="js/sigma.js/src/renderers/canvas/sigma.canvas.nodes.def.js"></script>
-<script src="js/sigma.js/src/renderers/canvas/sigma.canvas.extremities.def.js"></script>
-<script src="js/sigma.js/src/middlewares/sigma.middlewares.rescale.js"></script>
-<script src="js/sigma.js/src/middlewares/sigma.middlewares.copy.js"></script>
-<script src="js/sigma.js/src/misc/sigma.misc.animation.js"></script>
-<script src="js/sigma.js/src/misc/sigma.misc.bindEvents.js"></script>
-<script src="js/sigma.js/src/misc/sigma.misc.drawHovers.js"></script>
-<script src="js/sigma.js/plugins/sigma.parsers.gexf/gexf-parser.js"></script>
-<script src="js/sigma.js/plugins/sigma.parsers.gexf/sigma.parsers.gexf.js"></script>
+<script src="js/sigmajs/src/sigma.core.js"></script>
+<script src="js/sigmajs/src/conrad.js"></script>
+<script src="js/sigmajs/src/utils/sigma.utils.js"></script>
+<script src="js/sigmajs/src/utils/sigma.polyfills.js"></script>
+<script src="js/sigmajs/src/sigma.settings.js"></script>
+<script src="js/sigmajs/src/classes/sigma.classes.dispatcher.js"></script>
+<script src="js/sigmajs/src/classes/sigma.classes.configurable.js"></script>
+<script src="js/sigmajs/src/classes/sigma.classes.graph.js"></script>
+<script src="js/sigmajs/src/classes/sigma.classes.camera.js"></script>
+<script src="js/sigmajs/src/classes/sigma.classes.quad.js"></script>
+<script src="js/sigmajs/src/captors/sigma.captors.mouse.js"></script>
+<script src="js/sigmajs/src/captors/sigma.captors.touch.js"></script>
+<script src="js/sigmajs/src/renderers/sigma.renderers.webgl.js"></script>
+<script src="js/sigmajs/src/renderers/sigma.renderers.def.js"></script>
+<script src="js/sigmajs/src/renderers/webgl/sigma.webgl.nodes.def.js"></script>
+<script src="js/sigmajs/src/renderers/webgl/sigma.webgl.nodes.fast.js"></script>
+<script src="js/sigmajs/src/renderers/webgl/sigma.webgl.edges.def.js"></script>
+<script src="js/sigmajs/src/renderers/webgl/sigma.webgl.edges.fast.js"></script>
+<script src="js/sigmajs/src/renderers/webgl/sigma.webgl.edges.arrow.js"></script>
+<script src="js/sigmajs/src/renderers/canvas/sigma.canvas.labels.def.js"></script>
+<script src="js/sigmajs/src/renderers/canvas/sigma.canvas.hovers.def.js"></script>
+<script src="js/sigmajs/src/renderers/canvas/sigma.canvas.nodes.def.js"></script>
+<script src="js/sigmajs/src/renderers/canvas/sigma.canvas.extremities.def.js"></script>
+<script src="js/sigmajs/src/middlewares/sigma.middlewares.rescale.js"></script>
+<script src="js/sigmajs/src/middlewares/sigma.middlewares.copy.js"></script>
+<script src="js/sigmajs/src/misc/sigma.misc.animation.js"></script>
+<script src="js/sigmajs/src/misc/sigma.misc.bindEvents.js"></script>
+<script src="js/sigmajs/src/misc/sigma.misc.drawHovers.js"></script>
+<script src="js/sigmajs/plugins/sigma.parsers.gexf/gexf-parser.js"></script>
+<script src="js/sigmajs/plugins/sigma.parsers.gexf/sigma.parsers.gexf.js"></script>
 <script src="js/underscore-min.js"></script>
 <div id="container">
   <style>
