--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 <h1 id="des-kaisers-offene-daten">Des Kaisers offene Daten</h1>
 <p><strong>Die Öffnung der Behördendaten wird oft als deren &quot;Befreiung&quot; beschrieben. Doch man mag sie auch mit einer schrittweisen Entkleidung vergleichen. Was tun, wenn wir die &quot;nackten Zahlen&quot; vor uns haben? Wer soll sie neu einkleiden? Und wie? Das ist die Frage, der sich die Open Data-Community in der Schweiz aktuell stellt.</strong></p>
+<h2 id="öffentlichkeitsgesetz">Öffentlichkeitsgesetz</h2>
 <p>Das mit der Öfffnung der Behördendaten hat in der Schweiz schon eine längere Geschichte. Als späte Folge des Fichenskandals in den 90er Jahren erliess der Bund 2006 ein Gesetz, das die Bundesbehörden dazu verpflichtet, auf Anfrage sämtliche Informationen herauszugeben. Das Gesetz kennt dabei nur wenige Einschränkungen. Zum Beispiel den Schutz von persönlichen Daten.</p>
 <p>Das Öffentlichkeitsgesetz wurde eingeführt um den Staatsapparat für die Öffentlichkeit transparenter zu machen. Viele, bisher nur interne, Informationen wurden nun von ihrem dicken Amtsmantel befreit. Zur Freude, vor allem, vieler Journalisten, deren Arbeit dadurch ungemein erleichtert wurde. Auch die meisten Kantone folgten dem Beispiel des Bundes und führten ähnliche Gesetze ein.</p>
 <p>
@@ -17,37 +18,47 @@
 </iframe>
 </p>
 <p><em>Map mit Kantonen und Bundesämtern. Zeigt welche Kantone ein Öffentlichkeitsgesetz haben und wie ihr Status bezüglich Open Data ist.</em></p>
+<h2 id="open-defintion">Open Defintion</h2>
 <p>Wie durch Zufall prägte im gleichen Jahr die <em>Open Knowledge Foundation</em> den Begriff <em>Open Data</em>. Nach dem Grundsatz von Open Data, soll der Staat die Daten die er erhebt auch seinen Bürgern zugänglich machen. Eine der Hauptbegründungen war damals wie heute: mehr Transparenz und Demokratie.</p>
 <p>Die <a href="http://opendefinition.org/od/2.0/de/"><em>Open Defintion</em></a> fordert dazu eine Öffnung der Daten in dreifacher Hinsicht:</p>
 <ol style="list-style-type: decimal">
 <li>Offene Lizenz</li>
 <li>Freier Zugang</li>
-<li>Offenes Format</li>
+<li>Offenes, maschinenlesbares Format</li>
 </ol>
 <p>Obwohl Open Data und das Öffentlichkeitsgesetz Schwestern im Geiste sind, erfüllt das Öffentlichkeitsgesetz maximal Punkt zwei. Das Öffentlichkeitsgesetz verlangt lediglich die Herausgabe von Daten. Open Data hingegen deren komplette Freigabe.</p>
-<p>Diese Freigabe ist ein oft übersehenes aber entscheidendes Kriterium von offenen Daten. Sie geschieht nämlich explizit durch eine <em>offenen Lizenz</em>. In dieser verzichtet der Herausgeber auf jegliche Ansprüche. <a href="#fn1" class="footnoteRef" id="fnref1"><sup>1</sup></a> Er kann so rechtlich keinen Einfluss auf die spätere Verwendung der Daten nehmen. Die Daten entledigen sich damit eines weiteren Stückes Ballasts.</p>
-<ul>
-<li>Selbstbedienungssystem</li>
-<li>Schwere Nachvollziehbarkeit</li>
-</ul>
-<p>2014 verabschiedete der Bundesrat eine Strategie zum Thema Open Data in er Massnahmen definiert um die Behördendaten in der Schweiz schrittweise zu Öffnen. Ähnliche Prozesse laufen parallel auch in vielen Kantonen.</p>
-<p>Diese Entwicklung wurde nicht zuletzt durch die Gründung des Vereins opendata.ch 2014 eingeleitet. Die Aktivisten des Vereins sind gut vernetzt in Politik, Medien und der IT-Branche. Obwohl der Verein auch immer wieder den wirtschaftlichen Nutzen von offenen Daten betont, sind die Mitglieder doch vor allem Idealisten.</p>
-<p>Diesen Eindruck habe ich jedenfalls, als ich Oleg Lavrovsky, den Community Manager des Vereins im Kaffee Effing in Bern treffe. Aus dem geplanten Interview wird bald eine Grundatzdiskussion. Lavrovsky sieht offene Daten in Zukunft als unverzichtbarer Teil unserer Infrastruktur. Wie Wasser oder Strom.</p>
-<p>Damit eine solche Infrastruktur aber Realität werden kann, braucht es wie bei Wasser und Strom aber Standards. In der Sprache der <em>Open Defintion</em> bedeutet das offene und maschinenlesbare Formate. Es ist durchaus nicht immer eindeutig, was ein offenes oder maschinenlesbares Format ist. ES hat sich jedoch ein Konses über eine handvoll Formate wie CSV, JSON oder TIFF gebildet.</p>
+<h2 id="offene-lizenzen">Offene Lizenzen</h2>
+<p>Diese Freigabe ist ein oft übersehenes aber entscheidendes Kriterium von offenen Daten. Sie geschieht nämlich explizit durch eine <em>offenen Lizenz</em>. In dieser verzichtet der Herausgeber auf jegliche Ansprüche.<a href="#fn1" class="footnoteRef" id="fnref1"><sup>1</sup></a> Er kann so rechtlich keinen Einfluss auf die spätere Verwendung der Daten nehmen.</p>
+<p>Der Bundesrat bezeichnete dies in seiner Open Data-Strategie als ein &quot;Selbstbedienungssystem&quot;. Die Daten können beliebig vervielfältigt, weitergegeben und kopiert werden. Sie entledigen sich dadurch eines weiteren &quot;Ballasts&quot; – und entzieht den Erzeugern die Kontrolle. &quot;Es ist oftmals kaum mehr nachzuvollziehen wer, welche Datensätze nutzt&quot;. Sagt JuanPablo Lovato. &quot;Aber das liegt in der Natur des Sache&quot;.</p>
+<h2 id="verein-opendata.ch">Verein opendata.ch</h2>
+<p>Dass Open Data auf den Radar des Bundesrates kam, dafür ist nicht zuletzt der 2011 gegründete <em>Verein opendata.ch</em> verwantwortlich. Die Aktivisten des Vereins sind gut vernetzt in Politik, Medien und der IT-Branche. So rangieren sie auf Twitter mit fast <a href="https://twitter.com/opendatach">5000 Followern</a>. Weit mehr als ähnliche Lobbyorganisationen wie swissICT oder Energie Schweiz. Der Verein betont zwar immer wieder den wirtschaftlichen Nutzen von offenen Daten (geschätzt auf bis zu einer Milliarde Franken pro Jahr); trotzdem sind seine Mitglieder aber vor allem Idealisten.</p>
+<p>Dieser Eindruck bestätigt sich, als ich Oleg Lavrovsky, den &quot;Crowdsourcing Champion&quot; des Vereins im Kaffee Effing in Bern treffe. Aus dem geplanten Interview wird bald eine Grundatzdiskussion. Lavrovsky sieht offene Daten in Zukunft als unverzichtbaren Teil unserer Infrastruktur. Wie Wasser oder Strom.</p>
+<p>Damit eine solche Infrastruktur aber Realität werden kann, braucht es wie bei Wasser und Strom aber Standards. In der Sprache der <em>Open Defintion</em> bedeutet das offene und maschinenlesbare Formate.</p>
+<h2 id="plattform-opendata.swiss">Plattform opendata.swiss</h2>
+<p>Solche Datensätze zentral zu sammeln ist das Ziel der Plattform opendata.swiss. Sie ist ein Teil des Massnahmenpaketes des Bundesrates.</p>
 <p>Aus ihrem ursprünglichen Interpretationskontext herausgehoben, sind die Daten nun maschinenlesbar und einheitlich. Der letzte Schritt der Entkleidung ist die zentralisierung der Datensätze auf einer Plattform: opendata.swiss.</p>
 <p>Die Plattform ist eine der zentralen Massnahmen der OGD-Strategie des Bundes. Sie sammelt seit 2015 alle offenen Datensätze aus Bundesämtern, Kantonen, Gemeinden und bundesnahen Betrieben. Das Resultat davon ist, was sonst, eine Zahl: 2048 Datensätze.</p>
 <p>Hier nimmt der Prozess des Entkleidens sein vorläufiges Ende. Die Datensätze die sich ursprünglich in ein Gewirr von Anbietern, Bestimmungen und Formaten hüllten sind nun entkleidet vor uns.</p>
+<h2 id="die-nackten-zahlen">Die nackten Zahlen</h2>
 <p>Als Besucher der Plattform merke ich schnell, wie wenig mir diese Zahl sagt. Ich möchte wissen was dahiner steckt. Was sind das für Daten? Was kann ich damit machen? Ist das viel?</p>
 <p>Ich mache mich an die Beantwortung der letzten Frage. Der Prozess des Wiedereinkleidens beginnt.</p>
+<p>
+<iframe id="plattform" src="sunburst/index.html" height="800px">
+</iframe>
+</p>
 <p>Die Gesamtheit der Datensätze auf der Plattform schlägt mit 60 GB zu buche. Aber nicht jeder Datensatz ist gleich geartet. Während Bildarchive schnell auf mehrere GB anwachsen, begnügen sich statistische Datensätze mit ein paar MB. Ich versuche es also mit der Anzahl Felder. Wieder ergibt sich ein anderes Bild. Und ein bisschen erwachen die Zahlen für mich zum Leben.</p>
 <p>++ Ob die grösse eines Datensatzes aber dessen wichtigstes Merkmal ist, lässt sich stark bezweifeln. Die Besucherzahlen auf jeden Fall zeigen nochmals ein anderes Bild.</p>
+<h2 id="informationsvisualisierungen">Informationsvisualisierungen</h2>
 <p>Oftmals werden Informationsvisualisierungen als wichtiger Faktor beschrieben um offene Daten für Laien zugänglicher zu machen. So präsentieren zum Beispiel der Staat Singapur oder auch die USA ihre Datensätze visuell aufbereitet auf der Startseite.</p>
 <p>Visualisierungen zeichnen sich auch für die ersten erfolgreichen Open Data Projekte verantwortlich. Seien es die Standorte der Zürcher Freibäder oder die Pünktlichkeit der VBZ Tramlinien.</p>
 <p>Aufregend wird es aber vor allem da, wo die Nutzung über die blosse Darstellung der vorhanden Daten hinausgeht. So zum Beispiel die App &quot;foodly&quot;, die Datensätze kombiniert um dem Konsumenten Kontext zu seinen Einkäufen zu geben. Zum Beispiel, wie lokal er gerade eingekauft hat und ob es alternative Produkte gibt, die weniger weit gereist sind.</p>
-<p>Ein solches, neues Einkleider der Daten, geschieht oft in Kontexten, die vielen Datennutzern vertraut sind. So hat zum Beispiel die Veröffentlichung der ÖV-Fahrplandaten dieses Jahr, viele Pendler inspiriert, den Fahrplan für sich neu zu interpretieren.</p>
+<h2 id="kontexte">Kontexte</h2>
+<p>Ein solches, neues Einkleiden der Daten, geschieht oft in Kontexten, die vielen Datennutzern vertraut sind. So hat zum Beispiel die Veröffentlichung der ÖV-Fahrplandaten dieses Jahr, viele Pendler inspiriert, den Fahrplan für sich neu zu interpretieren.</p>
 <p>Das Erklärt auch, warum Geodaten in der Open Data-Bewegung immer eine führende Rolle gespielt haben. Sie bringen ihren Kontext gleich mit und sind so in der Lebensrealität der Leute veranktert.</p>
 <p>Den Datensätzen einen Kontext zu geben ist auch das Anliegen der Hackathons, die die Open Data-Aktivisten regelmässig organisieren. Sie sind immer themenbezogen und geben den versuchen den grösseren Kontext der Daten zu vermitteln.</p>
+<h2 id="linked-data">Linked Data</h2>
 <p>Auch Tim Berners-Lee, sieht das Ziel von Open Data schliesslich in der Kontextualisierung. Seine 5-Sterne Open Data-Skala weist <em>Linked Open Data</em> als die letzte Stufe aus. Das bedeutet, dass Datensätze miteinander in Relation gesetzt werden können.</p>
+<h2 id="risiken">Risiken</h2>
 <p>Die Aufgabe ist gross und die Gefahren sind vielfältig. Daten zu nutzen, die man selbst nicht erhoben hat, birgt immer das Risiko, sie falsch zu interpretieren.</p>
 <p>Jacqueline Badran warnt darum in einer Botschaft an die Open Data-Hacker 2013 auch vor einer &quot;Scheinobjektivität&quot;. Sie entsteht, wenn Aussagen zwar mit Zahlen belegt werden, diese aber falsch interpretiert wurden.</p>
 <p>Die Kehrseite ist aber auch, dass die Sekundärnutzung der Daten Fehler, Lücken und Fehlinterpretationen aufhebt. Eine Feedback-Kultur die dazu führt, dass Glaubwürdigkeit der Daten am Ende höher ist und nicht tiefer.</p>
